--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,7 @@
 		<!-- p means paragraph -->
 		<div>
 			<h1>Nicholas Chung</h1>
+			<h4>Project Portfolio</h4>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 		</div>
 
